--- a/66strikse_analysis2.Rmd
+++ b/66strikse_analysis2.Rmd
@@ -12,15 +12,20 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(kableExtra)
 library(scales)
+library(here) #to find working directory
 
+```
+
+```{r}
+#checking for necessary data files
+stopifnot(file.exists(here("strike_list_clean.csv")))
+stopifnot(file.exists(here("bls66.csv")))
 ```
 
 
 
-
 ```{r}
-
-df<- read_csv("C:\\Users\\atrahan\\Desktop\\coding\\66strikes\\strike_list_clean.csv")
+df<- read_csv(here("strike_list_clean.csv"))
 
 df <- df %>%
   rename(
@@ -34,29 +39,55 @@ df <- df %>%
     OnStrike = as.numeric(OnStrike),
     TotalEmployees=as.numeric(TotalEmployees),
     #DaysLost=NA, 
-    DaysLost = as.numeric(DateSettled - DateStarted),
-    WorkerHoursLostMin=OnStrike*DaysLost,
-    WorkerHoursLostMax=TotalEmployees*DaysLost
-  )
+    StrikeLength = as.numeric(DateSettled - DateStarted),
+    WorkerDaysLostMin=OnStrike*StrikeLength,
+    WorkerDaysLostMax=TotalEmployees*StrikeLength,
+    ActionType = str_to_lower(ActionType)
+    )
+```
 
-sum_on_strike <- sum(df$OnStrike, na.rm = TRUE)
-sum_days_lost <- sum(df$DaysLost, na.rm = TRUE)
-sum_worker_hours_lost_min <- sum(df$WorkerHoursLostMin, na.rm = TRUE)
-sum_worker_hours_lost_max <- sum(df$WorkerHoursLostMax, na.rm = TRUE)
+
+```{r}
+# Count occurrences of each ActionType
+action_summary <- df %>%
+  count(ActionType, sort = TRUE)
+
+# Display using kable
+action_summary %>%
+  knitr::kable(
+    caption = "Frequency of Each Action Type",
+    format = "html",
+    col.names = c("Action Type", "Count")
+  ) %>%
+  kable_styling(
+    bootstrap_options = c("striped", "hover", "condensed"),
+    full_width = FALSE,
+    position = "center"
+  )
+```
+
+
+```{r}
+
+dfStrike <- df %>%
+  filter(ActionType %in% c("wildcat", "strike","strike [assumed authorized]"))
+
+
+sum_on_strike <- sum(dfStrike$OnStrike, na.rm = TRUE)
+sum_days_lost_min <- sum(dfStrike$WorkerDaysLostMin, na.rm = TRUE)
+sum_days_lost_max<-sum(dfStrike$WorkerDaysLostMax,na.rm=TRUE)
 
 # Create summary table
 summary_table <- tibble(
   Metric = c(
     "Total Workers On Strike",
-    "Total Work Days Lost",
-    "Total Work Hours Lost (Min)",
-    "Total Work Hours Lost (Max)"
+    "Total Worker-Days Lost (Min)",
+    "Total Worker-Days Lost (Max)"
   ),
   Value = c(
     sum_on_strike,
-    sum_days_lost,
-    sum_worker_hours_lost_min,
-    sum_worker_hours_lost_max
+    sum_days_lost_min,
+    sum_days_lost_max
   )
 ) %>%
   mutate(Value = comma(Value))  # <-- HERE: add commas AFTER
@@ -74,9 +105,20 @@ summary_table %>%
 
 ```{r}
 
-dfBLS<-read_csv("C:\\Users\\atrahan\\Desktop\\coding\\66strikes\\bls66.csv")
+dfBLS<-read_csv(here("bls66.csv"))
 
-kable(dfBLS)
+dfBLS %>%
+  head(10) %>%
+  mutate(across(where(is.numeric), comma)) %>%
+  knitr::kable(
+    caption = "Preview of BLS 1966 Data",
+    format = "html"
+  ) %>%
+  kable_styling(
+    bootstrap_options = c("striped", "hover", "condensed"),
+    full_width = FALSE,
+    position = "center"
+  )
 
 ```
 
